# Nexus-Terminal

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  main.py
backend/api/: auth.py  blockchain.py  data.py  defi.py  orders.py  portfolio.py  positions.py  quantum.py  scanners.py  signals.py  strategies.py  workspaces.py
backend/core/: config.py  database.py  events.py  security.py  telemetry.py
backend/models/: user.py  workspace.py
backend/schemas/: auth.py  market.py
backend/services/: ai_agents.py  backtester_quantum.py  data_oracle.py  defi_bridge.py  execution_nexus.py  risk_fortress.py  token_engine.py
backend/utils/: greeks_galaxy.py  indicators_epic.py  quantum_opt.py
frontend/: package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  index.html
frontend/src/components/: ChartNexus.tsx  DOMSupreme.tsx  OrderOracle.tsx  PositionPanel.tsx  TimeSalesReconstruct.tsx  WatchlistPanel.tsx  WorkspaceEvolution.tsx
frontend/src/lib/: api_hooks.ts  auth_context.tsx  websocket_nexus.ts
frontend/src/pages/: ChartsEpic.tsx  MarketplaceCosmos.tsx  NexusDashboard.tsx  OptionsGalaxy.tsx  PortfolioFortress.tsx  ScannersOracle.tsx  SettingsNexus.tsx  StrategiesUniverse.tsx  TradingCosmos.tsx
kubernetes/: Chart.yaml  values.yaml
